# mugato

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TODO.md  configurator.py  demo.ipynb  lightning_talk.ipynb  mini_gato.ipynb  mugato.ipynb  pyproject.toml  token_and_embed.ipynb  train.py
mini_gato/: util.py
mugato/: __init__.py  config.py  mugato.py  nano_gpt.py  tokenizer.py  train.py  util.py  utils.py
mugato/data/: __init__.py  a_ok_vqa.py  combined_dataloader.py  examples.ipynb  four_rooms.py  ok_vqa.py  pointmaze.py  shakespeare.py  util.py  utils.py  wikitext_103.py
mugato/data/synthetic/: synth.md
mugato/models/: transformer.py
tests/: test_combined_dataloader.py  test_mugato.py  test_tokenizer.py  test_train.py  test_utils.py
tests/data/: test_four_rooms.py  test_shakespeare.py  test_utils.py
