[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mugato/__init__.py"

[tool.poetry]
name = "mugato"
version = "0.0.1"
description = "A mini unofficial implementation of DeepMind's GATO paper."
authors = ["Eric Ihli <eihli@owoga.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4"
datasets = "3.0.2"
einops = "0.8.0"
IPython = "9.1.0"
ipywidgets = "8.1.5"
matplotlib = "3.9.2"
minari = "0.5.1"
minari-gcs = "0.5.1"
minari-hdf5 = "0.5.1"
minigrid = "2.3.1"
numpy = "2.1.2"
Pillow = "11.0.0"
requests = "~=2.32.3"
timm = "1.0.11"
tqdm = "4.66.6"
tiktoken = "0.8.0"
torch = "2.5.1"
torchvision = "0.20.1"
wandb = "0.18.5"

[tool.poetry.group.dev.dependencies]
nb-clean = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
