[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "mugato"
version = "0.0.1"
description = "A mini unofficial implementation of DeepMind's GATO paper."
authors = [
    {name = "Eric Ihli", email = "eihli@owoga.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "datasets>=3.0.2",
    "einops>=0.8.0",
    "minari[hdf5]>=0.5.3",
    "minigrid>=2.3.1",
    "numpy==1.26.0",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "timm>=1.0.11",
    "tqdm>=4.66.6",
    "tiktoken>=0.8.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "wandb>=0.16.4",
    "tensordict>=0.7.2",
    "matplotlib>=3.10.1",
    "torchrl>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.2.0",
    "jupyter>=1.1.1",
    "mypy>=1.9.0",
    "nb-clean>=4.0.1",
    "ipython>=8.22.1",
    "ipywidgets>=8.1.2",
    "matplotlib>=3.9.2",
]
test = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
]

[tool.hatch.version]
path = "mugato/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pygame.pkgdata",
]
